--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "excel4node": "^1.3.2",
     "express": "^4.16.2",
     "nodemon": "^1.14.3",
+    "helmet": "^3.10.0",
     "standart": "*",
     "superagent": "^3.8.2"
   }
