--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "formidable": "^1.1.1",
     "helmet": "^3.10.0",
     "nodemon": "^1.14.3",
+    "readline": "^1.3.0",
     "standart": "*",
     "superagent": "^3.8.2"
   }
