--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.16.2",
     "formidable": "^1.1.1",
     "helmet": "^3.10.0",
+    "linebyline": "^1.3.0",
     "nodemon": "^1.14.3",
     "readline": "^1.3.0",
     "standart": "*",
