--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nodemon": "^1.14.3",
     "readline": "^1.3.0",
     "standart": "*",
-    "superagent": "^3.8.2"
+    "superagent": "^3.8.2",
+    "tablesorter": "^2.29.5"
   }
 }
