--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "express": "^4.16.2",
     "formidable": "^1.1.1",
     "helmet": "^3.10.0",
+    "json2xls": "^0.1.2",
     "linebyline": "^1.3.0",
     "nodemon": "^1.14.3",
     "readline": "^1.3.0",
     "standart": "*",
-    "superagent": "^3.8.2"
+    "superagent": "^3.8.2",
+    "tablesorter": "^2.29.5"
   }
 }
