--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.16.2",
     "formidable": "^1.1.1",
     "helmet": "^3.10.0",
+    "jquery.scrollto": "^2.1.2",
     "json2xls": "^0.1.2",
     "linebyline": "^1.3.0",
     "nodemon": "^1.14.3",
